# lilconvex

./: .gitignore  README.md
pool/: Cargo.toml  package-lock.json  package.json  workflow.cjs  workflow.sh
pool/interaction/: boy.snippets.sh  devnet.snippets.sh  testnet.snippets.sh
pool/mandos/: add_liquidity.scen.json  empty.scen.json
pool/meta/: Cargo.toml
pool/meta/src/: main.rs
pool/scripts/: index.js  interactions.py  workflow.py
pool/src/: farm.rs  governance_proxy.rs  lib.rs  pair.rs  pool.rs  stable_swap.rs
pool/tests/: empty_rust_test.rs
pool/wasm/: Cargo.toml
pool/wasm/src/: lib.rs
scripts/: deploy.py  interaction.py
