[package]
name = "pool-wasm"
version = "0.0.0"
edition = "2018"
publish = false
authors = [ "you",]

[lib]
crate-type = [ "cdylib",]

[workspace]
members = [ ".",]

[dev-dependencies]

[profile.release]
codegen-units = 1
opt-level = "z"
lto = true
debug = false
panic = "abort"

[dependencies.pool]
path = ".."

[dependencies.elrond-wasm-node]
version = "0.30.0"

[dependencies.elrond-wasm-output]
version = "0.30.0"
features = [ "wasm-output-mode",]
